# cease

./: CMakeLists.txt  README.md
include/: cease.h
src/: lib.c
